Blog and internal pages

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,7 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-#__next {
-  min-height: 100%;
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import './prism.css';
+@import 'tailwindcss/utilities';
